--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,5 +6,16 @@
     </h1>
     <app-loader [isLoading]="isLoading"></app-loader>
     <q [hidden]="isLoading">{{quote}}</q>
+
+    
   </div>
+  <nav>
+    <a routerLink="/Charts">Click Here</a>
+  </nav>
+
+  <br>
+
+  <nav>
+    <a routerLink="/Gauges">Gauges</a>
+  </nav>
 </div>
