--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -308,7 +308,7 @@
 
   <dxo-tooltip
     [enabled]="true"
-    [customizeTooltip]="Dn_customizeTooltip"
+    [customizeTooltip]="DN_customizeTooltip"
     format="millions">
   </dxo-tooltip>
 
