--- a/src/app/gauges/gauges.component.html
+++ b/src/app/gauges/gauges.component.html
@@ -56,6 +56,8 @@
           [startAngle]="-90"
           [endAngle]= "-180">
         </dxo-geometry>
+        
+      
 
         <dxo-scale
           [startValue]="100"
@@ -66,6 +68,360 @@
       </dx-circular-gauge>
     </div>
     <!--Start from here-->
+    <div class= "center-section">
+      <div class ="speed-vlaue">
+        <span>{{speedValue}}</span>
+      </div>
+      <dx-circular-gauge
+        id="speed-gauge"
+        [value]="speedValue">
+
+        <dxo-size [width]="260"></dxo-size>
+        <dxo-value-indicator
+          type="twoColorNeedle"
+          color="transparent"
+          [secondFraction]="0.24"
+          secondColor="#f05b41">
+        </dxo-value-indicator>
+
+        <dxo-geometry
+          [startAngle]="225"
+          [endAngle]="315">
+        </dxo-geometry>
+
+        <dxo-scale
+          [startValue]="20"
+          [endValue]="200"
+          [tickInterval]="20"
+          [minorTickInterval]="10">
+        </dxo-scale>
+      </dx-circular-gauge>
+      <dx-linear-gauge
+        id="fuel-guage"
+        [value]="50 - speedValue *0.24">
+        <dxo-size [width]="90" [height]="20"></dxo-size>
+        <dxo-scale
+          [startValue]="0"
+          [endValue]="50"
+          [tickInterval]="25"
+          [minorTickInterval]=12.5>
+
+          <dxo-minor-tick [visible]="true"></dxo-minor-tick>
+          <dxo-label [visible]="false"></dxo-label>
+        </dxo-scale>
+
+        <dxo-value-indicator
+          color="#f05b41"
+          [size]="8"
+          [offset]="7">
+        </dxo-value-indicator>
+      </dx-linear-gauge>
+    </div>
+    <div class="right-section">
+      <dx-circular-gauge
+        [value]="speedValue/2">
+        <dxo-size [width]="90" [height]="90"></dxo-size>
+        <dxo-value-indicator
+          color="#f05b41">
+        </dxo-value-indicator>
+        <dxo-geometry
+          [startAngle]="90"
+          [endAngle]="0">
+        </dxo-geometry>
+        <dxo-scale
+          [startValue]="100"
+          [endValue]="0"
+          [tickInterval]="10">
+        </dxo-scale>
+      </dx-circular-gauge>
+      <dx-circular-gauge
+        [value]="speedValue/2">
+        <dxo-size [width]="90" [height]="90"></dxo-size>
+        <dxo-value-indicator color="#f05b41"></dxo-value-indicator>
+        <dxo-geometry
+          [startAngle]="0"
+          [endAngle]="-90">
+        </dxo-geometry>
+        <dxo-scale
+          [startValue]="0"
+          [endValue]="100"
+          [tickInterval]="10">
+        </dxo-scale>
+      </dx-circular-gauge>
+    </div>
   </div>
+  <dx-slider id="slider"
+    [min]="0"
+    [max]="200"
+    [width]="155"
+    [(value)]="speedValue">
+  </dx-slider>
+</div>
+<br>
+<br>
+<!--*************************************************************************************-->
+
+<dx-bar-gauge id ="gauge"
+  [startValue]="-50"
+  [endValue]="50"
+  [baseValue]="0"
+  [values]="[-21.3,14.8,-30.9,45.2]"
+  palette="ocean">
+  <dxo-label [customizeText]="customizeText"></dxo-label>
+  <dxo-export [enabled]="true"></dxo-export>
+  <dxo-title text="Deviations in the Manufactured Parts">
+    <dxo-font [size]="28"></dxo-font>
+  </dxo-title>
+</dx-bar-gauge>
+
+<br>
+<br>
+<!--************************************************************************************-->
+
+<dx-bar-gauge id="gauge"
+  [startValue]="0"
+  [endValue]="200"
+  [values]="[121.4, 135.4,115.9,141.1,127.5]">
+  <dxo-label
+    [visible]="false">
+  </dxo-label>
+
+  <dxo-tooltip 
+    [enabled]="true"
+    [customizeTooltip]="Tooltip_customizeText">
+  </dxo-tooltip>
+
+  <dxo-export [enabled] ="true"></dxo-export>
+  <dxo-title text="Average Speed by Racer">
+    <dxo-font [size]="28"></dxo-font>
+  </dxo-title>
+</dx-bar-gauge>
+<br>
+<br>
+<!--************************************************************************************-->
+
+<div class ="long-title"><h3>Sampling by Goods</h3></div>
+<div id = "gauge-demo">
+    <dx-bar-gauge id="gauge"
+      [startValue]="0"
+      [endValue]="50"
+      [values]="values">
+      <dxo-label>
+        <dxo-format
+          type="fixedPoint"
+          [precision]="0">
+        </dxo-format>
+      </dxo-label>
+    </dx-bar-gauge>
+    <div id="panel">
+        <dx-check-box *ngFor="let product of products"
+          [text]="product.name"
+          [(value)]="product.active"
+          (onValueChanged)="productsToValues()">
+        </dx-check-box>
+    </div>
 </div>
 
+<br>
+<br>
+<!--************************************************************************************-->
+
+<dx-circular-gauge id ="gauge" [value]="105">
+  <dxo-scale 
+    [startValue]="50"
+    [endValue]="150"
+    [tickInterval]="10">
+    <dxo-label [useRangeColors]="true"></dxo-label>
+  </dxo-scale>
+
+  <dxo-range-container palette="pastel">
+    <dxi-range [startValue]="50" [endValue]="90"></dxi-range>
+    <dxi-range [startValue]="90" [endValue]="130"></dxi-range>
+    <dxi-range [startValue]="130" [endValue]="150"></dxi-range>
+  </dxo-range-container>
+  <dxo-export [enabled]="true"></dxo-export>
+  <dxo-title text="Temperature of the Liquid in the Boiler">
+    <dxo-font [size]="28"></dxo-font>
+  </dxo-title>
+</dx-circular-gauge>
+
+<br>
+<br>
+<!--***********************************************************************************-->
+
+<dx-circular-gauge id="gauge" [value]="750">
+  <dxo-scale
+    [startValue]="0"
+    [endValue]="1000"
+    [tickInterval]="100"
+    [minorTickInterval]="25">
+    <dxo-tick color="#9c9c9c"></dxo-tick>
+    <dxo-minor-tick color="#9c9c9c" [visible]="true"></dxo-minor-tick>
+  </dxo-scale>
+
+  <dxo-range-container backgroundColor="none"></dxo-range-container>
+  <dxo-export [enabled]="true"></dxo-export>
+  
+  <dxo-title text="Fan Speed(in RPM)">
+  </dxo-title>
+</dx-circular-gauge>
+
+<br>
+<br>
+<!--***********************************************************************************-->
+<dx-circular-gauge id ="gauge" [value]="45">
+  <dxo-scale
+    [startValue]="0"
+    [endValue]="100"
+    [tickInterval]="10">
+    <dxo-label [customizeText]="customizeText"></dxo-label>
+  </dxo-scale>
+  <dxo-range-container>
+    <dxi-range [startValue]="0" [endValue]="20" color="#CE2029"></dxi-range>
+    <dxi-range [startValue]="20" [endValue]="50" color="#FFD700"></dxi-range>
+    <dxi-range [startValue]="50" [endValue]="100" color="#228B22"></dxi-range>
+  </dxo-range-container>
+  <dxo-export [enabled]="true"></dxo-export>
+  <dxo-title text="Battery Charge">
+    <dxo-font [size]="28"></dxo-font>
+  </dxo-title>
+</dx-circular-gauge>
+
+<br>
+<br>
+<!--**********************************************************************************-->
+
+<div class ="long-title">
+  <h3>Power of Engines</h3>
+</div>
+
+<div id="gauge-demo">
+  <dx-circular-gauge
+    id="rectangleNeedle"
+    [value]="75">
+    <dxo-value-indicator
+      type ="rectangleNeedle"
+      color="#9B870C">
+    </dxo-value-indicator>
+
+    <dxo-geometry 
+      [startAngle]="180"
+      [endAngle]="0">
+    </dxo-geometry>
+
+    <dxo-scale
+      [startValue]="0"
+      [endValue]="100"
+      [tickInterval]="50">
+      <dxo-label [customizeText]="customizeText"></dxo-label>
+    </dxo-scale>
+  </dx-circular-gauge>
+
+  <dx-circular-gauge
+    id="twoColorNeedle"
+    [value]="80">
+    <dxo-value-indicator
+      type="twoColorNeedle"
+      color="#779ECB"
+      secondColor="#734F96">
+    </dxo-value-indicator>
+
+    <dxo-geometry
+      [startAngle]="180"
+      [endAngle]="0">
+    </dxo-geometry>
+
+    <dxo-scale
+      [startValue]="0"
+      [endValue]="100"
+      [tickInterval]="50">
+      <dxo-label [customizeText]="customizeText"></dxo-label>
+    </dxo-scale>
+  </dx-circular-gauge>
+
+  <dx-circular-gauge
+    id="triangleNeedle"
+    [value]="65">
+    <dxo-value-indicator
+      type="triangleNeedle"
+      color="#8FBC8F">
+    </dxo-value-indicator>
+
+    <dxo-geometry
+      [startAngle]="180"
+      [endAngle]="0">
+    </dxo-geometry>
+    <dxo-scale 
+      [startValue]="0"
+      [endValue]="100"
+      [tickInterval]="50">
+      <dxo-label [customizeText]="customizeText"></dxo-label>
+    </dxo-scale>
+  </dx-circular-gauge>
+
+  <dx-circular-gauge 
+    id ="rangebar"
+    [value]= "90">
+    <dxo-value-indicator
+      type="rangebar"
+      color="#f05b41">
+    </dxo-value-indicator>
+
+    <dxo-geometry
+      [startAngle]="180"
+      [endAngle]="0">
+    </dxo-geometry>
+
+    <dxo-scale
+      [startValue]="0"
+      [endValue]="100"
+      [tickInterval]="50">
+      <dxo-label [customizeText]="customizeText"></dxo-label>
+    </dxo-scale>
+
+  </dx-circular-gauge>
+
+  <dx-circular-gauge 
+  id ="textCloud"
+  [value]= "70">
+  <dxo-value-indicator
+    type="textCloud"
+    color="#483D8B">
+  </dxo-value-indicator>
+
+  <dxo-geometry
+    [startAngle]="180"
+    [endAngle]="0">
+  </dxo-geometry>
+
+  <dxo-scale
+    [startValue]="0"
+    [endValue]="100"
+    [tickInterval]="50">
+    <dxo-label [customizeText]="customizeText"></dxo-label>
+  </dxo-scale>
+
+</dx-circular-gauge>
+
+<dx-circular-gauge 
+id ="triangleMarker"
+[value]= "85">
+<dxo-value-indicator
+  type="triangleMarker"
+  color="#e0e33b">
+</dxo-value-indicator>
+
+<dxo-geometry
+  [startAngle]="180"
+  [endAngle]="0">
+</dxo-geometry>
+
+<dxo-scale
+  [startValue]="0"
+  [endValue]="100"
+  [tickInterval]="50">
+  <dxo-label [customizeText]="customizeText"></dxo-label>
+</dxo-scale>
+
+</dx-circular-gauge>
+</div>
